// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`State set & get 1`] = `
Object {
  "key": "value",
}
`;

exports[`State set & get 2`] = `
Object {
  "": "value2",
  "key": "value",
}
`;

exports[`State set & get 3`] = `
Object {
  "": "value2",
  "key": "value",
}
`;

exports[`State set & get 4`] = `"value3"`;

exports[`State set & get 5`] = `"value4"`;

exports[`State set & get 6`] = `
Object {
  "": "value5",
}
`;

exports[`State set & get 7`] = `
Array [
  Array [
    "New ReactGlobalState created",
  ],
  Array [
    "Initial state:",
    Object {
      "key": "value",
    },
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value2",
  ],
  Array [
    "New state:",
    Object {
      "": "value2",
      "key": "value",
    },
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value3",
  ],
  Array [
    "New state:",
    "value3",
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value4",
  ],
  Array [
    "New state:",
    "value4",
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value5",
  ],
  Array [
    "New state:",
    Object {
      "": "value5",
    },
  ],
]
`;
